# Apriltag-Android-Nav-App

./: .gitignore  README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle  google-services.json
app/src/androidTest/java/com/example/apriltagapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp  opencv_native_lib.cpp
app/src/main/cpp/apriltag/: camera_params.h  tagStandard52h13.c
app/src/main/java/com/example/apriltagapp/: AppComponent.kt  AppModule.kt  ApriltagDetection.java  ApriltagDetection1.java  ApriltagNative.java  ApriltagNative2.java  CameraActivity.java  CameraTexture.kt  CameraView.kt  GlActivity.kt  Line.kt  Line2.kt  MainActivity.kt  MyRenderer.kt  NavApplication.kt  OnCameraDisconnected.kt  Triangle.kt
app/src/main/java/com/example/apriltagapp/di/: AppComponent.kt  AppModule.kt  ViewModelFactoryModule.kt  ViewModelKey.kt  ViewModelModule.kt
app/src/main/java/com/example/apriltagapp/listener/: DetectionListener.kt  SearchResultClickListener.kt  TagDetectionListener.java  TagDetectionListener.kt
app/src/main/java/com/example/apriltagapp/model/: Arrow.kt  DijkstraPath.kt  LinkedTag.kt  Spot.kt  Tag.kt  TagFamily.kt  TagGraph.kt  tagsList.kt
app/src/main/java/com/example/apriltagapp/model/Shape/: Arrow.kt  Rectangle.kt  RectangleFull.kt  ThreeDimentionRectangle.kt
app/src/main/java/com/example/apriltagapp/model/baseModel/: Pos.kt  Shape.kt  UserCamera.kt
app/src/main/java/com/example/apriltagapp/model/baseShape/: Line.kt  Rectangle.kt  ThreeDimentionLine.kt  Triangle.kt
app/src/main/java/com/example/apriltagapp/model/repository/: MyRepositoryImpl.kt  Repository.kt  TagFamilyRepository.kt
app/src/main/java/com/example/apriltagapp/utility/: BitmapController.kt  JsonGenerator.kt  JsonParser.kt  NonNullLiveData.kt  NonNullMutableLiveData.kt  ParcelableArrivals.kt
app/src/main/java/com/example/apriltagapp/view/: ApriltagCamera2View.java  CameraCalibrator.java  ViewModelFactory.kt
app/src/main/java/com/example/apriltagapp/view/about/: AboutFragment.kt
app/src/main/java/com/example/apriltagapp/view/camera/: CameraFragment.kt  CameraTexture.kt  CameraTexture2.kt  CameraView.kt  CameraViewModel.kt  MyRenderer.kt
app/src/main/java/com/example/apriltagapp/view/entry/: EntryFragment.kt  EntryViewModel.kt
app/src/main/java/com/example/apriltagapp/view/map/: MapFragment.kt
app/src/main/java/com/example/apriltagapp/view/search/: SearchFragment.kt  SearchResultAdapter.kt  SearchViewModel.kt
app/src/main/java/com/example/apriltagapp/view/sensor/: SensorFragment.kt
app/src/main/java/com/example/apriltagapp/view/settings/: SettingsFragment.kt
app/src/main/res/drawable/: red_dot.xml
app/src/main/res/layout/: activity_camera.xml  activity_gl.xml  activity_main.xml  fragment_about.xml  fragment_camera.xml  fragment_entry.xml  fragment_map.xml  fragment_search.xml  fragment_sensor.xml  fragment_settings.xml  search_result.xml
app/src/main/res/navigation/: nav_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/apriltagapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sdk/java/src/apriltag/: ApriltagDrawNative.java  ApriltagNative.java  ApriltagPosEstimation.java  OpenCVNative.java
sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCamera2View.java  JavaCameraView.java
